--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/alura-cursos/1922-graphql#readme",
   "dependencies": {
+    "apollo-server": "^3.3.0",
+    "graphql": "^15.5.3",
     "json-server": "^0.16.1",
     "nodemon": "^2.0.4"
   }
